[tool.poetry]
name = "ws-django-betterforms"
version = "2.0.0"
description = "WS-maintained Django 4.2 compatible fork of django-betterforms - Making forms suck less"
authors = ["WheelSize Team <support@wheel-size.com>"]
license = "BSD-2-Clause"
readme = "README.rst"
homepage = "https://github.com/driveate/ws-django-betterforms"
repository = "https://github.com/driveate/ws-django-betterforms"
documentation = "https://django-betterforms.readthedocs.org/en/latest/"
keywords = ["django", "forms", "multiform", "modelform"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "betterforms" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.2,<5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
coverage = "^7.3.0"
tox = "^4.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["betterforms"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
